# Movienite

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  movienite.py  pyproject.toml
.github/workflows/: deploy.yml  merge-to-master.yml  pr-check.yml
alembic/versions/: c3p0e7f2a1d8_convert_watched_to_status.py
compat/: csv_migrator.py  migrator.py
database/: db.py
database/migrations/: 001-init.sql
docker/: Dockerfile  api.dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  web.dockerfile
frontend/: bun.lockb  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx  style.css  types.ts
frontend/src/components/: AddMovieButton.tsx  AddMovieModal.tsx  CategoryButtons.tsx  ErrorAlert.tsx  Header.tsx  Login.tsx  MovieCard.tsx  MovieRating.tsx  MovieSection.tsx  NSFWFilter.tsx  PaginationControls.tsx  SearchInput.tsx  SortControls.tsx  StreamingSection.tsx  ThemeSelector.tsx  UserFilter.tsx  ViewToggle.tsx  index.ts
frontend/src/components/icons/: DiscardIcon.tsx  GridIcon.tsx  ListIcon.tsx  (+4 more)
frontend/src/hooks/: authStore.ts  errorAlertStore.ts  movieStore.ts  useAuth.ts  useLocalStorage.ts  useMovieEvents.ts  useMovies.ts  usePagination.ts  useTheme.ts
frontend/src/styles/: alerts.css  base.css  buttons.css  filters.css  login.css  modal.css  movie-card.css  sort-controls.css  theme.css  variables.css
frontend/src/utils/: api.ts  localStorage.ts  pagination.ts  rating.ts  sort.ts  theme.ts
static/: index.html  main.js  style.css
