[project]
name = "movienite"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "psycopg[binary]>=3.3.2",
    "requests>=2.32.5",
    "tldextract>=5.3.1",
    "uvicorn>=0.40.0",
]
